--- a/config/crash_assistant/config.toml
+++ b/config/crash_assistant/config.toml
@@ -5,25 +5,45 @@
 	#If help_link equals 'CHANGE_ME', this value will be ignored and gnomebot.dev used.
 	#Supported values: mclo.gs / gnomebot.dev
 	upload_to = "gnomebot.dev"
+	#By changing this value you can disable creating "crash_assistant_localization_overrides" folder and placing "README.md" file there.
+	generate_localization_overrides_folder_with_readme = true
+	#By default, crash assistant will get the value for the current language from the overrides folder, then from the jar.
+	#By changing this option, it will first try to get it from the current overrides, then (if no override exists for this language)
+	#from the override for the language specified here, and only then from the jar language.
+	#Use "NONE" to disable this feature. Or language key, like "en_us" to enable it.
+	priority_lang_for_overrides = "NONE"
+	#Show gui on minecraft crashed on modloading and FML error screen displayed.
+	show_on_fml_error_screen = true
+	#Link which will be opened in browser on request_help_button pressed.
+	#If equals CHANGE_ME, will open Forge/NeoForge/Fabric/Quilt discord link. Names of communities/channels also will be used not from config, but according to this link.
+	#Must start with 'https://' or 'www.'
+	help_link = "https://discord.gg/KhkqdKq695"
+	#Prevents creating "crash_assistant" folder in the logs folder.
+	#So this option prevents our app logging at all.
+	#HIGHLY UNRECOMMENDED to disable! Contains many useful info.
+	prevent_generating_crash_assistant_app_logs = false
+	#Here you can change priority for logs.
+	#For example if you want crash report to be shown earlier than latest.log in the available logs list.
+	#Supported values: https://github.com/KostromDan/Crash-Assistant/blob/1.19-1.20.1/app/src/main/java/dev/kostromdan/mods/crash_assistant/app/logs_analyser/LogType.java
+	#Usage: ["CRASH_REPORT", "LOG"]
+	logs_priority_overrides = []
+	#Close old CrashAssistantApp if it's still running when starting a new instance of Minecraft, to avoid confusing player with window from old crash.
+	kill_old_app = true
+	#By default our process is scanning for terminated processes(they can appear with delay) and after finish of scan enabling upload buttons.
+	#This option can prevent this and enable individual upload buttons immediately after crash.
+	#However can confuse users and make them clicking individual upload buttons instead of Upload All Button.
+	prevent_upload_buttons_delay = false
 	#Before uploading the first log, requires the user to accept the privacy policy.
 	#Disabling this option may be illegal in some countries if you are modpack creator. Disable at your own risk.
 	enable_privacy_policy_acceptance = true
 	#If options.txt doesn't exist, the default language will be used.
 	default_lang = "en_us"
-	#Show gui on minecraft crashed on modloading and FML error screen displayed.
-	show_on_fml_error_screen = true
 	#List of blacklisted log files (checked with startswith()). This files won't show in GUI logs list.
 	blacklisted_logs = []
-	#Link which will be opened in browser on request_help_button pressed.
-	#If equals CHANGE_ME, will open Forge/NeoForge/Fabric/Quilt discord link. Names of communities/channels also will be used not from config, but according to this link.
-	#Must start with 'https://' or 'www.'
-	help_link = "https://discord.gg/KhkqdKq695"
 	#Unfortunately mclogs censoring ip-like versions as has no way to determine if it's version or IP.
 	#This will prevent this by replacing dot's in them to dot-like symbol.
 	#Anti censoring only versions, IP's are kept censored.
 	enable_mclogs_anti_ip_like_version_censorer = true
-	#Close old CrashAssistantApp if it's still running when starting a new instance of Minecraft, to avoid confusing player with window from old crash.
-	kill_old_app = true
 
 #Here you can change text of lang placeHolders.
 #Also you can change any text in lang files.
@@ -69,6 +89,19 @@
 	#Replaces "\n" separator between logs to "   |   " to make message vertically smaller.
 	one_line_logs = true
 
+#Settings of links copied by Upload and copy link buttons
+[copied_links]
+	#With this option, you can customize how single links from individual upload buttons are copied, there
+	#log of small size was uploaded to a single link.
+	#For example, leave just $LINK$ to copy just link.
+	single_link = "$LOG_NAME$$FILE_NAME$: $LINK$"
+	#With this option, you can customize how links from individual upload buttons are copied, there
+	#log was split to the 2 parts (head and tail, due to too large size for single upload), but user only decided to copy only one of them (not message with both).
+	single_link_split = "$LOG_NAME$$FILE_NAME$($HEAD_OR_TAIL$): $LINK$ $TOO_BIG_REASONS$"
+	#With this option, you can customize how links from individual upload buttons are copied, there
+	#log was split to the 2 parts (head and tail, due to too large size for single upload), but user decided to copy message with both.
+	both_links_split = "$LOG_NAME$[$FILE_NAME$ <TOLOWER>$MSG_LANG.gui.split_log_dialog_head$</TOLOWER>](<$LINK_FIRST_LINES$>) / [<TOLOWER>$MSG_LANG.gui.split_log_dialog_tail$</TOLOWER>](<$LINK_LAST_LINES$>) $TOO_BIG_REASONS$"
+
 #Settings of modlist feature.
 #Adds in generated msg block about which mods modpack user added/removed/updated.
 #Also you can see diff by running '/crash_assistant modlist diff' command.
@@ -96,6 +129,20 @@
 	#Enable feature.
 	enabled = true
 
+#Settings of too many changes warning feature.
+#Notifies end users of the modpack and saying they made too many changes to the modpack.
+#Not displayed to the modpack creators.
+[too_many_changes_warning]
+	#Set to the positive integer to enable feature. Set to negative integer to disable.
+	#How many changes end user should make for warning to be displayed.
+	count = -1
+	#With this option, you can select the formulation of this warning, currently supported:
+	#   - NOTIFY: Just saying to the end user that what they made many changes and adding random mods or clicking
+	#the "Update All" button is not a good idea without proper testing. It is expected to crash.
+	#   - DROP_SUPPORT: Saying what you are not providing support for that amount of changes, suggesting the end user to
+	#re-install modpack or they are on their own with that amount of changes.
+	formulation_type = "NOTIFY"
+
 #Settings of analysis feature.
 #Analysing logs for most common reasons of crashes and displaying recommendations with fixes.
 [analysis]
@@ -103,6 +150,16 @@
 	#List of them can be found here: dev.kostromdan.mods.crash_assistant.app.logs_analyser.crash_reasons
 	#For example "Create6Addons"
 	blacklisted_reasons = []
+	#Enable feature.
+	enabled = true
+
+#Settings of analysis tools feature.
+#Here you can enable disable showing some analysis tools fot end user.
+[analysis_tools]
+	#Here you can disable some Analysis tools by class names.
+	#List of them can be found here: dev.kostromdan.mods.crash_assistant.app.gui.analysis
+	#For example "MCreatorModDetectorGUI"
+	blacklisted_tools = []
 	#Enable feature.
 	enabled = true
 
@@ -116,8 +173,6 @@
 
 #Settings of notifying about intel corrupted processors.
 [intel_corrupted]
-	#Show funny related gif in warning message.
-	show_gif = true
 	#Enable feature.
 	enabled = true
 
@@ -138,32 +193,41 @@
 	#Default Swing font size is 12, Default for this button in crash assistant is 16.
 	#Not recommended to set it more than 16, as it will affect the increase of GUI size because all text won't fit.
 	upload_all_button_font_size = 16
+	#Limit modpack logo height. Default is -1, which means it's calculated automatically.
+	#By default, this should not be needed. But if you have heavily customized GUI or using
+	#a rectangle logo instead of square, you may want to decrease its size, so this option could be needed in such case. 
+	limit_modpack_logo_height = -1
+	#If true, the logo will be larger, Replacing a some of `don't send screenshot` notice.
+	#If false, it will be smaller and logo will be end right where the `don't send screenshot` notice starts.
+	#You should try both, but most likely:
+	#- If you have some long text in the discord description, you will love the small one.
+	#- If the text is short, you will love the large one.
+	modpack_logo_large_mode = false
 	#Animate border to request user attention even more.
 	screenshot_of_gui_notice_animated_border = true
+	#Path to a modpack logo to display in the top of the GUI.
+	#Path is relative to the Minecraft instance folder. Leave empty to disable.
+	modpack_logo_path = ""
+	#This option would be needed only if you limited modpack logo height.
+	#Otherwise, the logo will consume all available horizontal space.
+	#If true, the logo will be centered. If false, it will be aligned to the top. 
+	modpack_logo_aligned_center = true
 	#You can change Upload All Button color to request user attention.
 	#format is "R_G_B", range is 0-255, for example "255_0_0" is red color. Use "default" to use default swing color.
 	#Default for this button is "0_178_0" (dark green color).
 	upload_all_button_foreground_color = "0_178_0"
+	#Same as upload_all_button_font_size, but for Request Help button.
+	request_help_button_font_size = 16
+	#Will hide Upload All Button from GUI.
+	disable_upload_all_button = false
 	#Same as upload_all_button_font_size, but for Auto-Fix button (in integrated GPU warning).
 	auto_fix_button_font_size = 16
 	#Append comment text with notice about sending screenshot of this gui tells nothing to modpack creators.
 	show_dont_send_screenshot_of_gui_notice = true
-	#Same as upload_all_button_font_size, but for Request Help button.
-	request_help_button_font_size = 16
 
 #Checks crash_assistant compatibility with other incompatible mods.
 #Highly unrecommended to disable!
 [compatibility]
 	#Enable feature.
 	enabled = true
-
-#Settings of analysis tools feature.
-#Here you can enable disable showing some analysis tools fot end user.
-[analysis_tools]
-	#Enable feature.
-	enabled = true
-	#Here you can disable some Analysis tools by class names.
-	#List of them can be found here: dev.kostromdan.mods.crash_assistant.app.gui.analysis
-	#For example "MCreatorModDetectorGUI"
-	blacklisted_tools = []
 
