--- a/config/fermiummixins.cfg
+++ b/config/fermiummixins.cfg
@@ -156,6 +156,9 @@ general {
 
         # Fixes Reflecting Champions modifying their own received damage
         B:"Reflecting Damage Fix (Champions)"=true
+
+        # Fix overwriting dropped xp with champmulti * original and instead multiply champmulti * current. Makes the Champion xp multiplier apply on top of for example ScalingHealth Blight xp multiplier instead of replacing it.
+        B:"XP Drop Fix (Champions)"=false
     }
 
     "charm config" {
@@ -955,6 +958,8 @@ general {
         #--------------------------------------------------------------------------------------------------------#
         # List of entities and the value of their view distance to override with
         # Format: entityid=distance
+        # For vanilla entities, there are some special cases of not-registered entities or whole entity classes: 
+        # Use PLAYER for other players, LIVING for all vanilla living entities, HANGING for all hanging entities like item frames, FISH_HOOK for the fishing hook, FIREBALL for all fireballs, MINECART for all minecarts, ARROW for all arrows.
         # Requires "Allow Entity View Distance Override (Vanilla)" enabled
         ##########################################################################################################
 
