--- a/config/fugue.cfg
+++ b/config/fugue.cfg
@@ -238,7 +238,11 @@ general {
         B:"Enable Carryon Patch"=true
         B:"Enable Celeritas Patch"=true
         B:"Enable Censored ASM Patch"=true
+
+        # Disable this if you are using Charset CRE
         B:"Enable Charset lib Patch"=true
+
+        # Disable this if you are using CCL CRE
         B:"Enable Code Chicken Lib Patch"=true
         B:"Enable Colytra Patch"=true
         B:"Enable Corpse Patch"=true
@@ -333,8 +337,6 @@ general {
         B:"Enable Vampirism Patch"=true
         B:"Enable Water Power Patch"=true
         B:"Enable Wireless Utilities Patch"=true
-
-        # Should be compatible with better hurt time
         B:"Enable Worse Hurt Time Patch"=true
         B:"Enable XNet Patch"=true
         B:"Enable XaeroPlus Patch"=true
