update ram recommendations

--- a/config/concheckrmd.cfg
+++ b/config/concheckrmd.cfg
@@ -95,7 +95,7 @@ general {
         # The amount of RAM recommended for stable gameplay.
         # Min: 128
         # Max: 51200
-        I:"1) Ram Recommended (IN MB)"=5120
+        I:"1) Ram Recommended (IN MB)"=5096
 
         # If the player has less than the recommended amount of RAM assigned to the modpack then a warning will be displayed when the game is started.
         B:"2) Check RAM meets recommendation?"=true
@@ -120,7 +120,7 @@ general {
         # The amount of RAM recommended for stable gameplay.
         # Min: 128
         # Max: 51200
-        I:"1) Ram Recommended (IN MB)"=5120
+        I:"1) Ram Recommended (IN MB)"=5096
 
         # If the player has less than the recommended amount of RAM assigned to the modpack then a warning will be displayed in chat when a world is loaded.
         B:"2) Check RAM meets recommendation?"=true
@@ -129,7 +129,7 @@ general {
         B:"3) Customise low RAM Warning?"=true
 
         # The custom message to be displayed in chat if you have set the previous setting to 'True'. Will display custom message instead of the default text.
-        S:"4) Custom Message"=[WARNING] You may experience bad performance due to a shortage of RAM.
+        S:"4) Custom Message"=[WARNING] 5GB RAM is recommended for optimal performance.
     }
 
     ##########################################################################################################
