new item: sanity stew
- restores hunger
- restores 25% sanity
- grants invis for 10s
- cures all negative effects

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -172,6 +172,7 @@ definitions {
         contenttweaker:dreadstone_fragment
         quark:backpack
         %Veilstrium
+        contenttweaker:sanity_stew
      >
 
     #  [default: ]
