--- a/config/endermodpacktweaks/minecraft.cfg
+++ b/config/endermodpacktweaks/minecraft.cfg
@@ -342,10 +342,10 @@ wither {
 
 world {
     # Enable world tweaks
-    B:"[01] Enable World Tweaks"=false
+    B:"[01] Enable World Tweaks"=true
 
     # Force the difficulty to a specific value
-    B:"[02] Force Difficulty"=false
+    B:"[02] Force Difficulty"=true
 
     # The difficulty the world should be forced to
     # Valid values:
@@ -353,7 +353,7 @@ world {
     # EASY
     # NORMAL
     # HARD
-    S:"[03] Forced Difficulty"=NORMAL
+    S:"[03] Forced Difficulty"=HARD
 
     # Prevent players from changing the difficulty
     B:"[04] Lock Difficulty"=false
