--- a/config/mputils/addons/mpbasic/mpbasic.cfg
+++ b/config/mputils/addons/mpbasic/mpbasic.cfg
@@ -31,13 +31,13 @@ issue_tracker_settings {
     B:"Crashlogs to Gist default"=false
 
     # http of your IssueTracker [default: https://github.com/GenDeathrow/MPUtils/issues]
-    S:"Issue Tracker url"=https://github.com/CalaMariGold/TREPIDATION/issues/new
+    S:"Issue Tracker url"=https://github.com/CalaMariGold/TREPIDATION/issues
 
     # This is an Advance Settings, The web address must accept Json data to be able to automate issue reporting. It is up to you how you accept the json data on the website. I may have an example but only use this if you know what your doing. [default: false]
     B:"Use Automated issue tracker"=false
 
     # Use an in game form, If false the issue tracker button will just link to the tracker url. [default: false]
-    B:"Use in game form"=true
+    B:"Use in game form"=false
 }
 
 
