--- a/config/fermiumbooter.cfg
+++ b/config/fermiumbooter.cfg
@@ -1,6 +1,8 @@
 # Configuration file
 
 general {
+    # Appends prior mixin exceptions to crash reports to help diagnose crashes
+    B:"Append General Mixin Exceptions To Crash Reports"=true
     S:"Forced Early Mixin Config Additions" <
      >
 
