--- a/config/fugue.cfg
+++ b/config/fugue.cfg
@@ -72,6 +72,11 @@ general {
         openeye.logic.ModMetaCollector
         com.forgeessentials.core.preloader.asminjector.ASMUtil
      >
+
+    # Used when mouse wheel related operation being weird.
+    # Classes in this list will get their Mouse.getDWheel() and Mouse.getEventDWheel() redirected.
+    # Consult Cleanroom developers before using it!
+    # 
     S:"Mouse.getEventDWheel() Patching List" <
         mekanism.client.ClientTickHandler
         journeymap.client.ui.fullscreen.Fullscreen
@@ -215,6 +220,9 @@ general {
         B:"Enabel Survivial Inc. Patch"=true
         B:"Enable 5zig Patch"=true
 
+        # It stores script engine manage to a field which doesn't handle by universal patch
+        B:"Enable 7 Days to Mine Patch"=true
+
         # This patch is only for Advanced Rocketry by zmaster587.
         # Advanced Rocketry - Reworked by MarvinEckhardt doesn't need this!
         B:"Enable Advanced Rocketry Patch"=false
@@ -229,11 +237,16 @@ general {
         B:"Enable Astral Sorcery Patch"=true
         B:"Enable Better Formatting Code Patch"=true
         B:"Enable Better Records Patch"=true
+
+        # This mod is counting insn on target matching, which breaks after patch cleanup
+        B:"Enable Better Sprinting Patch"=true
         B:"Enable BetterPortals Patch"=true
 
         # This patch is for CB Multipart (previously ForgeMultiPart) from covers1624, MrTJP and ChickenBones.
         # MCMultiPart is another different mod!
         B:"Enable CB Multipart Patch"=true
+
+        # Patched toArray casting
         B:"Enable Calculator Patch"=true
         B:"Enable Carryon Patch"=true
         B:"Enable Celeritas Patch"=true
@@ -253,6 +266,9 @@ general {
         B:"Enable Custom NPCs Patch"=true
         B:"Enable Custom Skin Loader Patch"=true
 
+        # Patched toArray casting
+        B:"Enable Damage Indicators Mod Patch"=true
+
         # Patches DarkTheme's use of internal Java reflection APIs that are not available in Java 9+
         B:"Enable DarkTheme Patch"=true
         B:"Enable Dissolution Patch"=true
@@ -269,10 +285,16 @@ general {
         B:"Enable Essential Patch"=true
         B:"Enable Extra Utilities Patch"=true
         B:"Enable Farseek Patch"=true
+
+        # The mod is removing insn nodes by counting
+        B:"Enable Fluidlogged API Patch"=true
         B:"Enable Forge Endertech"=true
         B:"Enable Forge Endertech Patch"=true
         B:"Enable Funky Locomotion"=true
         B:"Enable Funky Locomotion Patch"=true
+
+        # It's ASM code adapted to Forge's weird compiler
+        B:"Enable Future MC Patch"=true
         B:"Enable Gliby's Physics Patch"=true
 
         # This gtceu patch is temporary. An official fix is pending.
@@ -310,11 +332,17 @@ general {
 
         # Using Apache http for json getting. Totally pointless since you don't need a lib to do this.
         B:"Enable Random Title Patch"=true
+
+        # The mod is removing getNext().getNext() and removed a label node
+        B:"Enable Rebind Patch"=true
         B:"Enable Recurrent Complex Patch"=true
         B:"Enable Refined Relocation 2 Patach"=true
         B:"Enable ReplayMod Patch"=true
         B:"Enable SAO UI Patch"=true
         B:"Enable ScreenshotViewer Patch"=true
+
+        # The mod is counting insn nodes in transformer and it breaks with latest recompiled class. Blame Vineflower and/or JDK 21 for this
+        B:"Enable Serene Seasons Patch"=true
         B:"Enable Shoulder Surfing Reloaded Patch"=true
         B:"Enable SimplyHotSpring Patch"=true
 
