--- a/config/Universal Tweaks - Tweaks.cfg
+++ b/config/Universal Tweaks - Tweaks.cfg
@@ -9,6 +9,9 @@ general {
         # Prevents breaking lower parts of sugar cane and cacti as well as unripe crops, unless sneaking
         B:"Better Harvest"=false
 
+        # Implements an improved system that makes rails face the player when placed
+        B:"Better Rail Placement"=true
+
         # Sets the delay in ticks between breaking blocks
         I:"Block Hit Delay"=5
 
@@ -302,14 +305,29 @@ general {
         # Sets the offset for the fire overlay in first person when the player is burning
         D:"First Person Burning Overlay"=-0.3
 
+        # Sets the limit of required hunger to be able to sprint
+        # Value of -1 lets you sprint with empty hunger
+        # Value of 20 prevents you from sprinting at all
+        # 6 for vanilla default
+        # Min: -1
+        # Max: 20
+        I:"Hunger Threshold to Sprint"=6
+
         # Lets husks and strays spawn underground like regular zombies and skeletons
         B:"Husk & Stray Spawning"=true
 
         # Replaces vanilla Minecarts dropping a Minecart and the contained item, and instead drop the combined item
         B:"Minecart Drops Itself"=false
 
-        # Mobs carrying picked up items will drop their equipment and despawn properly
-        B:"Mob Despawn Improvement"=true
+        # Mobs carrying picked up items will despawn properly (and optionally drop their equipment)
+        # DEFAULT: Vanilla behavior, no despawning
+        # DESPAWN: Despawn, void equipment
+        # DESPAWN_DROP: Despawn, drop equipment
+        # Valid values:
+        # DEFAULT
+        # DESPAWN
+        # DESPAWN_DROP
+        S:"Mob Despawning Improvement"=DEFAULT
 
         # Backports 1.16+ knockback to 1.12: Knockback resistance is now a scale instead of a probability
         B:"Modern Knockback"=true
@@ -329,6 +347,10 @@ general {
         # Min: 0.0
         # Max: 1.0
         D:"Rabbit Toast Spawning Chance"=0.0
+
+        # Sets the maximum exhaustion value when healing
+        # 6.0 for vanilla default
+        D:"Regen Exhaustion"=6.0
 
         # Sets the exhaustion value per cm when riding mounts
         # Min: 0.0
@@ -540,6 +562,10 @@ general {
 
             # Plays an indication sound effect when health is regained
             B:"[4] Indication Sound"=false
+
+            # Determines the maximum amount of health to regain
+            # 0 for no limitation
+            D:"[5] Max Heal Amount"=0.0
         }
 
         sleeping {
@@ -655,6 +681,28 @@ general {
             S:"[14] Dimension List Mode"=BLACKLIST
         }
 
+        "unsafe sleeping" {
+            # Enables the use of any of the settings in this category
+            B:"[1] Unsafe Sleeping Toggle"=false
+
+            # Allow sleeping even if mobs are nearby
+            B:"[2] Ignore Unsafe Sleeping"=false
+
+            # Apply the Glowing potion effect to nearby mobs preventing sleeping
+            B:"[3] Highlight Unsafe Mobs"=false
+
+            # Time in ticks the highlight will last. Only applies if "[3] Highlight Unsafe Mobs" is true
+            # Min: 1
+            # Max: 2147483647
+            I:"[4] Highlight Duration"=100
+
+            # If the Glowing potion effect will apply particles. Only applies if "[3] Highlight Unsafe Mobs" is true
+            B:"[4] Show Glowing Particles"=false
+
+            # When checking nearby hostile mobs, skip named mobs
+            B:"[5] Ignore Named Mobs"=false
+        }
+
     }
 
     items {
@@ -720,20 +768,11 @@ general {
         }
 
         mending {
-            # Bows enchanted with Infinity no longer require arrows
-            B:"[1] Arrowless Infinity"=true
-
             # Implements modern mending behavior to only repair damaged equipment with XP
             B:"[1] Mending Toggle"=true
 
-            # Allows the Infinity Enchantment to be combined with Mending
-            B:"[2] Infinity Conflict"=false
-
             # Determines the amount of durability mending will repair, on average, per point of experience
             D:"[2] Ratio"=2.0
-
-            # Allows the Infinity Enchantment to apply to all arrows (e.g. Tipped Arrows)
-            B:"[3] Infinity Affects All Arrows"=false
 
             # Repairs damaged items from the entire inventory with XP
             B:"[3] Overpowered"=false
@@ -846,6 +885,17 @@ general {
             B:"[12] Require Rebound Enchantment"=false
         }
 
+        infinity {
+            # Bows enchanted with Infinity no longer require arrows
+            B:"[1] Arrowless Infinity"=true
+
+            # Allows the Infinity Enchantment to be combined with Mending
+            B:"[2] Infinity Conflict"=false
+
+            # Allows the Infinity Enchantment to apply to all arrows (e.g. Tipped Arrows)
+            B:"[3] Infinity Affects All Arrows"=false
+        }
+
     }
 
     misc {
@@ -854,6 +904,9 @@ general {
 
         # Always returns the player to the main menu when quitting the game
         B:"Always Return to Main Menu"=false
+
+        # Enable the ability to swap equipped armor when right-clicking armor, instead of only being able to equip armor when the slot is empty. Also applies to Elytra
+        B:"Armor Swap"=false
 
         # Displays the ping in milliseconds of players when viewing the server list
         B:"Better Ping Display"=true
@@ -903,10 +956,6 @@ general {
 
         # Disables potion effect particles emitting from yourself
         B:"Hide Personal Effect Particles"=true
-        B:"Improved Entity Tracker Warning"=true
-
-        # Lets background music play continuously without delays
-        B:"Infinite Music"=false
 
         # Enhance the vanilla 'Open to LAN' GUI for listening port customization, removal of enforced authentication and more
         B:"LAN Server Properties"=true
@@ -940,11 +989,17 @@ general {
         # Less than or equal to 0 is set to the default
         I:"Particle Limit"=-1
 
+        # Sets the percentage of experience players can drop upon death instead of the capped ~7 levels
+        # Range from 0.0 to 1.0
+        # Below 0.0 for vanilla default
+        # Min: -1.0
+        # Max: 1.0
+        D:"Player XP Drop Percentage"=-1.0
+
         # Always indent keybind entries from the screen edge, preventing them from overflowing off the left side when particularly long keybind names are present
         B:"Prevent Keybinds from Overflowing Screen"=true
 
         # Removes the 3D Anaglyph button from the video settings menu
-        # Incompatible with OptiFine
         B:"Remove 3D Anaglyph Button"=false
 
         # Removes the redundant Minecraft Realms button from the main menu and silences notifications
@@ -979,6 +1034,16 @@ general {
 
         # Allows using a custom Narrator key, instead of being stuck with CTRL+B
         B:"Use Separate Narrator Key"=false
+
+        # Sets the view bobbing mode
+        # Default: Bobs both hand and camera (vanilla default)
+        # Hand only: Bobs only hand
+        # Camera only: Bobs only camera
+        # Valid values:
+        # DEFAULT
+        # HAND_ONLY
+        # CAMERA_ONLY
+        S:"View Bobbing Mode"=DEFAULT
 
         # Sets the maximum experience level players can reach
         # 0 to effectively disable gaining of experience
@@ -1024,6 +1089,9 @@ general {
 
             # Removes duplicate messages and instead put a number behind the message how often it was repeated
             B:"[3] Compact Messages"=true
+
+            # When waking up from bed, if the chat had text keep the chat window open
+            B:"[4] Keep Chat Active on waking"=true
         }
 
         "incurable potions" {
@@ -1310,6 +1378,106 @@ general {
             S:"[4] 256x256 Window Icon"=
         }
 
+        music {
+            # Enables various music playback control tweaks
+            B:"[01] Music Control Toggle"=false
+
+            # Select which music to play on menu screen
+            # Valid values:
+            # MENU
+            # OVERWORLD
+            # CREATIVE
+            # NETHER
+            # END
+            # END_BOSS
+            # CREDITS
+            S:"[02] Menu Music"=MENU
+
+            # Select which music to play on overworld dimension
+            # Valid values:
+            # MENU
+            # OVERWORLD
+            # CREATIVE
+            # NETHER
+            # END
+            # END_BOSS
+            # CREDITS
+            S:"[03] Overworld Music"=OVERWORLD
+
+            # Select which music to play on creative mode
+            # Valid values:
+            # MENU
+            # OVERWORLD
+            # CREATIVE
+            # NETHER
+            # END
+            # END_BOSS
+            # CREDITS
+            S:"[04] Creative Music"=CREATIVE
+
+            # Select which music to play on nether dimension
+            # Valid values:
+            # MENU
+            # OVERWORLD
+            # CREATIVE
+            # NETHER
+            # END
+            # END_BOSS
+            # CREDITS
+            S:"[05] Nether Music"=NETHER
+
+            # Select which music to play on end dimension
+            # Valid values:
+            # MENU
+            # OVERWORLD
+            # CREATIVE
+            # NETHER
+            # END
+            # END_BOSS
+            # CREDITS
+            S:"[06] End Music"=END
+
+            # Select which music to play on end dimension boss fight music
+            # Valid values:
+            # MENU
+            # OVERWORLD
+            # CREATIVE
+            # NETHER
+            # END
+            # END_BOSS
+            # CREDITS
+            S:"[07] End Boss Music"=END_BOSS
+
+            # Select which music to play on credits screen
+            # Valid values:
+            # MENU
+            # OVERWORLD
+            # CREATIVE
+            # NETHER
+            # END
+            # END_BOSS
+            # CREDITS
+            S:"[08] Credits Music"=CREDITS
+
+            # Don't pause music when game is paused
+            B:"[09] Keep Music On Pause"=false
+
+            # Enable custom delay for next music to play
+            B:"[10] Custom Music Delay"=false
+
+            # Minimum delay before next music plays (in ticks)
+            # A value of 0 will set the delay to 1 second
+            # Min: 0
+            # Max: 24000
+            I:"[11] Min Music Delay"=0
+
+            # Maximum delay before next music plays (in ticks)
+            # A value of 0 will set the delay to 1 second
+            # Min: 0
+            # Max: 24000
+            I:"[12] Max Music Delay"=0
+        }
+
     }
 
     performance {
@@ -1342,9 +1510,8 @@ general {
         # Optimizes Forge's ID prefix checking and removes prefix warnings impacting load time
         B:"Fast Prefix Checking"=true
 
-        # Skips initial world chunk loading & garbage collection to speed up world loading
-        # May have side effects such as slower chunk generation
-        B:"Fast World Loading"=false
+        # Skips garbage collection to speed up world loading
+        B:"Fast World Loading"=true
 
         # Fixes slow background startup edge case caused by checking tooltips during the loading process
         # May have side effects concerning tooltips
@@ -1359,7 +1526,6 @@ general {
 
         # Silences advancement errors
         B:"Mute Advancement Errors"=true
-        B:"Mute Ore Dictionary Errors"=true
 
         # Silences texture map errors
         B:"Mute Texture Map Errors"=true
@@ -1402,6 +1568,30 @@ general {
             # Most types should be specified with the vanilla default radius: 2.0
             S:"[5] Less Collisions Extra Targets" <
              >
+        }
+
+        "advancement triggers" {
+            # Optimizes triggering advancements when obtaining items
+            # Toggles all tweaks in this category
+            B:"[01] Faster Advancement Trigger Checking"=true
+
+            # Ignores inventory changes when stacks are completely emptied
+            B:"[02] Ignore Triggers for Emptied Stacks"=true
+
+            # Ignores inventory changes when stacks decrease in size, but are not emptied
+            B:"[03] Ignore Triggers for Decreased Stacks"=true
+
+            # Only trigger inventory changes for increased stack sizes that pass an advancement threshold
+            B:"[04] Optimize Triggers for Increased Stacks"=true
+
+            # Check the changed stack before testing and rewrite criterion matching
+            B:"[05] Faster Criterion Test"=true
+
+            # Add all inventory contents immediately upon opening a container
+            B:"[06] Initialize Container with Known Inventory"=true
+
+            # Only match against predicates after checking the changed stack size crosses a threshold
+            B:"[07] Compare Stack Size before Matching"=true
         }
 
     }
@@ -1514,6 +1704,14 @@ general {
             # 15 for pre-1.7 generation
             # 7 for vanilla default
             I:"[3] Cave Rarity"=7
+        }
+
+        "spawn chunks" {
+            # Determines if overworld spawn chunks are generated during world creation
+            B:"Spawn Chunks Generation"=true
+
+            # Determines if overworld spawn chunks are always kept loaded
+            B:"Spawn Chunks Loading"=true
         }
 
     }
