--- a/config/crash_assistant/config.toml
+++ b/config/crash_assistant/config.toml
@@ -38,12 +38,26 @@
 	enable_privacy_policy_acceptance = true
 	#If options.txt doesn't exist, the default language will be used.
 	default_lang = "en_us"
+	#Generates "logs/stderr_stream.log" with stderr stream.
+	#Since many launchers are not saving this info, which is extremely helpful for debugging some crashes.
+	#As only where crash reason is present. Keeps original stream untouched, just logs it to a file.
+	generate_own_launcher_log = true
 	#List of blacklisted log files (checked with startswith()). This files won't show in GUI logs list.
 	blacklisted_logs = []
 	#Unfortunately mclogs censoring ip-like versions as has no way to determine if it's version or IP.
 	#This will prevent this by replacing dot's in them to dot-like symbol.
 	#Anti censoring only versions, IP's are kept censored.
 	enable_mclogs_anti_ip_like_version_censorer = true
+
+#A simplified GUI that hides the logs list until the user opts into Expert Mode.
+[simple_mode]
+	#If enabled, the GUI starts in simple mode with logs hidden and a single "Show Logs (Expert Mode)" button.
+	#Disabled by default.
+	enabled = false
+	#If true, modpack creators always see the Expert Mode with logs visible, even if simple mode is enabled.
+	prevent_for_modpack_creators = true
+	#If true, hides the mod list changes section while simple mode is active.
+	hide_modlist_section = false
 
 #Here you can change text of lang placeHolders.
 #Also you can change any text in lang files.
@@ -91,16 +105,18 @@
 
 #Settings of links copied by Upload and copy link buttons
 [copied_links]
+	#With this option, you can customize how links from individual upload buttons are copied, there
+	#log was split to the 2 parts (head and tail, due to too large size for single upload), but user decided to copy message with both.
+	both_links_split = "$LOG_NAME$[$FILE_NAME$ <TOLOWER>$MSG_LANG.gui.split_log_dialog_head$</TOLOWER>](<$LINK_FIRST_LINES$>) / [<TOLOWER>$MSG_LANG.gui.split_log_dialog_tail$</TOLOWER>](<$LINK_LAST_LINES$>) $TOO_BIG_REASONS$"
 	#With this option, you can customize how single links from individual upload buttons are copied, there
 	#log of small size was uploaded to a single link.
 	#For example, leave just $LINK$ to copy just link.
 	single_link = "$LOG_NAME$$FILE_NAME$: $LINK$"
+	#If enabled, disables the head/tail selection dialog for split logs on individual uploads and always copies message with both links.
+	skip_split_dialog = false
 	#With this option, you can customize how links from individual upload buttons are copied, there
 	#log was split to the 2 parts (head and tail, due to too large size for single upload), but user only decided to copy only one of them (not message with both).
 	single_link_split = "$LOG_NAME$$FILE_NAME$($HEAD_OR_TAIL$): $LINK$ $TOO_BIG_REASONS$"
-	#With this option, you can customize how links from individual upload buttons are copied, there
-	#log was split to the 2 parts (head and tail, due to too large size for single upload), but user decided to copy message with both.
-	both_links_split = "$LOG_NAME$[$FILE_NAME$ <TOLOWER>$MSG_LANG.gui.split_log_dialog_head$</TOLOWER>](<$LINK_FIRST_LINES$>) / [<TOLOWER>$MSG_LANG.gui.split_log_dialog_tail$</TOLOWER>](<$LINK_LAST_LINES$>) $TOO_BIG_REASONS$"
 
 #Settings of modlist feature.
 #Adds in generated msg block about which mods modpack user added/removed/updated.
@@ -154,7 +170,7 @@
 	enabled = true
 
 #Settings of analysis tools feature.
-#Here you can enable disable showing some analysis tools fot end user.
+#Here you can enable or disable showing some analysis tools for end user.
 [analysis_tools]
 	#Here you can disable some Analysis tools by class names.
 	#List of them can be found here: dev.kostromdan.mods.crash_assistant.app.gui.analysis
@@ -218,6 +234,10 @@
 	upload_all_button_foreground_color = "0_178_0"
 	#Same as upload_all_button_font_size, but for Request Help button.
 	request_help_button_font_size = 16
+	#Same as upload_all_button_font_size, but for the Simple Mode toggle button.
+	simple_mode_button_font_size = 16
+	#Same as upload_all_button_foreground_color, but for the Simple Mode toggle button.
+	simple_mode_button_foreground_color = "0_0_178"
 	#Will hide Upload All Button from GUI.
 	disable_upload_all_button = false
 	#Same as upload_all_button_font_size, but for Auto-Fix button (in integrated GPU warning).
