rem shutupmodelloader (already in stellarcore)

--- a/config/AleXndr/simplecore.cfg
+++ b/config/AleXndr/simplecore.cfg
@@ -19,7 +19,7 @@ general {
     B:Tabs=true
 
     # Turn on verbose logging [default: true]
-    B:VerboseLogging=true
+    B:VerboseLogging=false
 
     # create test furnace for testing furnace code [default: false]
     B:createTestFurnace=false
