update patchoulibooks, add unread entry toast

--- a/config/patchoulibooks.cfg
+++ b/config/patchoulibooks.cfg
@@ -23,9 +23,31 @@ patchoulibooks {
         # Improve recipe lookup by checking for output instead of recipe id.
         # This is untested with books added by other mods. User added books work fine.
         B:"[3] Improve Recipe Lookup"=false
+
+        # If true, mark all entries of PatchouliBooks books as read.
+        # Because who wants to click through all entries?
+        B:"[4] Pre-read Books"=true
     }
 
     "just enough items / had enough items" {
+        B:"Open JEI from Books"=true
+        B:"Open Patchouli Book from JEI"=true
+    }
+
+    "inventory button" {
+        B:"[1] Enable Inventory Button"=false
+        B:"[2] Add unique inventory button"=false
+        S:"[3] Button Anchor"=TOP_LEFT
+        I:"[4] Button Offset X"=134
+        I:"[5] Button Offset Y"=61
+    }
+
+    jei_hei {
+        # Prevent books from showing up in JEI.
+        S:"Book Blacklist" <
+            patchoulibooks:patchoulibooks
+         >
+
         # Enable opening JEI for items in Patchouli books.
         B:"Open JEI from Books"=true
 
@@ -35,7 +57,11 @@ patchoulibooks {
         B:"Open Patchouli Book from JEI"=true
     }
 
-    "inventory button" {
+    inventory_button {
+        # Time in seconds, whenever the toast should be displayed,
+        # while the inventory is open.
+        I:"[10] Annoy Toast Delay"=10
+
         # Enable the inventory button for Patchouli books.
         # On click it will open a list of all loaded books.
         # The button will be displayed only if the is no book specified in the patchouli config and 'addUniqueInventoryButton' is set to false.
@@ -63,6 +89,20 @@ patchoulibooks {
 
         # Offset of the button from the anchor position on the y-axis.
         I:"[5] Button Offset Y"=61
+
+        # Notify the player that they have unread entries in the inventory book.
+        B:"[6] Annoy Player"=true
+
+        # The sound that plays to notify the player about unread entries.
+        # Leaving this empty, will disable the sound.
+        S:"[7] Annoy Sound"=
+
+        # Time in seconds, whenever the sound should get played,
+        # while the inventory is open.
+        I:"[8] Annoy Sound Delay"=3
+
+        # Display a toast while there are unread entries.
+        B:"[9] Annoy Toast"=true
     }
 
 }
