replace JEI with HEI, add JEI Utilities

--- a/config/jei/jei.cfg
+++ b/config/jei/jei.cfg
@@ -5,69 +5,122 @@
 ##########################################################################################################
 # advanced
 #--------------------------------------------------------------------------------------------------------#
-# Advanced config options to change the way JEI functions.
+# Advanced config options to change the way HEI functions.
 ##########################################################################################################
 
 advanced {
-    # Add new bookmarks to the front of the bookmark list instead of the end. [default: true]
+    # When enabled, adds new bookmarks to the front of the bookmark list [default: false]
     B:addBookmarksToFront=false
 
-    # Move the JEI search bar to the bottom center of the screen. [default: false]
+    # Builds search trees on multiple threads concurrently, turn this off if you're experiencing extremely high load on your CPU when loading HEI [default: true]
+    B:asyncSearchTreeBuilding=true
+
+    # Move the HEI search bar to the bottom center of the screen. [default: false]
     B:centerSearchBarEnabled=false
     B:debugModeEnabled=false
 
-    # Choose if JEI should give ingredients directly to the inventory or pick them up with the mouse.
+    # Choose if HEI should give ingredients direct to the inventory (inventory) or pick them up with the mouse (mouse_pickup).
     # [Default: mouse_pickup]
     # [Valid: [inventory, mouse_pickup]]
     S:giveMode=inventory
 
-    # The maximum width of the ingredient and bookmark list overlays. [range: 4 ~ 100, default: 100]
+    # The maximum width of the ingredient list. [range: 4 ~ 100, default: 100]
     I:maxColumns=100
 
     # The maximum height of the recipe GUI. [range: 175 ~ 5000, default: 350]
     I:maxRecipeGuiHeight=350
 
-    # Formatting for the mod names in tooltips for JEI GUIs. Leave blank to disable. [Default: blue italic] [Valid: [black, dark_blue, dark_green, dark_aqua, dark_red, dark_purple, gold, gray, dark_gray, blue, green, aqua, red, light_purple, yellow, white, obfuscated, bold, strikethrough, underline, italic]]
+    # How the mod name should be formatted in the tooltip for HEI GUIs. Leave blank to disable. [Default: blue italic] [Valid: [black, dark_blue, dark_green, dark_aqua, dark_red, dark_purple, gold, gray, dark_gray, blue, green, aqua, red, light_purple, yellow, white, obfuscated, bold, strikethrough, underline, italic]]
     S:modNameFormat=
-
-    # Enable JEI memory usage optimizations. [default: true]
     B:optimizeMemoryUsage=true
+
+    # Color of the recipe bookmark group in RGBA format. [range: -2147483648 ~ 2147483647, default: -1627324672]
+    I:recipeBookmarkGroupColor=-1627324672
+
+    # Enable ultra low memory usage mode, can slow down searching by a lot however. [default: false]
+    B:ultraLowMemoryUsage=false
+}
+
+
+category {
+    # Determines the display order of recipe categories in HEI. Categories listed earlier appear first in the HEI interface. [Default: []]
+    S:categoryUidOrder <
+     >
+}
+
+
+##########################################################################################################
+# misc
+#--------------------------------------------------------------------------------------------------------#
+# Miscellaneous config options
+##########################################################################################################
+
+misc {
+    # Whether to hide the bottom-left corner bookmark button [default: false]
+    B:hideBottomLeftCornerBookmarkButton=true
+
+    # Whether to hide the bottom-right corner config button [default: false]
+    B:hideBottomRightCornerConfigButton=false
+
+    # Disable to disallow mouse clicks to see recipes and usages when hovering over an ingredient [default: true]
+    B:mouseClickToSeeRecipes=true
+
+    # Show user-hidden ingredients when the player is in creative mode [default: false]
+    B:showHiddenIngredientsInCreative=false
+
+    # Skip showing HEI's progress bars on load, can save up to a few seconds when loading [default: false]
+    B:skipShowingProgressBar=true
+
+    # Show when a recipe has been changed by adding it to the item's tooltip [default: true]
+    B:tooltipShowRecipeBy=false
+}
+
+
+rendering {
+    # Stops extremely frequent ingredient draw calls by using a render buffer, improves FPS in menus by up to 2-3x. But animations and glint will not be applied correctly. [default: false]
+    B:bufferIngredientRenders=false
 }
 
 
 ##########################################################################################################
 # search
 #--------------------------------------------------------------------------------------------------------#
-# Options related to the search bar.
+# Options relating to the search bar.
 ##########################################################################################################
 
 search {
-    # Search mode for colors (prefix: ^).
+    # Search mode for Colors (prefix: ^)
     # [Default: disabled]
     # [Valid: [enabled, require_prefix, disabled]]
     S:colorSearchMode=DISABLED
 
-    # Search mode for creative mode tab names (prefix: %).
+    # Search mode for Creative Tab Names (prefix: %)
     # [Default: disabled]
     # [Valid: [enabled, require_prefix, disabled]]
     S:creativeTabSearchMode=DISABLED
 
-    # Search mode for mod names (prefix: @).
+    # Search mode for Mod Names (prefix: @)
     # [Default: require_prefix]
     # [Valid: [enabled, require_prefix, disabled]]
     S:modNameSearchMode=REQUIRE_PREFIX
 
-    # Search mode for Ore Dictionary names (prefix: $).
+    # Search mode for Ore Dictionary Names (prefix: $)
     # [Default: disabled]
     # [Valid: [enabled, require_prefix, disabled]]
     S:oreDictSearchMode=enabled
 
-    # Search mode for resource IDs (prefix: &).
+    # Search mode for resources ids (prefix: &)
     # [Default: disabled]
     # [Valid: [enabled, require_prefix, disabled]]
     S:resourceIdSearchMode=DISABLED
 
-    # Search mode for tooltips (prefix: #).
+    # Includes advanced tooltips in search trees [WILL RELOAD SEARCH TREES] [default: false]
+    B:searchAdvancedTooltips=false
+
+    # Includes stripped diacritics version of strings in search trees [WILL RELOAD SEARCH TREES] [default: false]
+    B:searchStrippedDiacritics=false
+
+    # Search mode for Tooltips (prefix: #)
     # [Default: enabled]
     # [Valid: [enabled, require_prefix, disabled]]
     S:tooltipSearchMode=ENABLED
@@ -75,7 +128,6 @@ search {
 
 
 searchadvancedtooltips {
-    # config.jei.searchAdvancedTooltips.search.comment [default: false]
     B:search=false
 }
 
