--- a/config/RPG-HUD/settings.cfg
+++ b/config/RPG-HUD/settings.cfg
@@ -51,7 +51,7 @@ P:inspector_position=0_40
 C:color_air=23490
 P:air_position=0_0
 B:status_vertical=true
-B:status_time=true
+B:status_time=false
 P:pickup_position=0_0
 D:status_scale=1.0
 P:mount_health_position=0_0
@@ -87,4 +87,4 @@ B:prevent_event_jump_bar=false
 B:prevent_element_render_jump_bar=false
 B:render_vanilla_status_effects=false
 B:prevent_event_status_effects=false
-B:prevent_element_render_status_effects=false
+B:prevent_element_render_status_effects=true
