equipments now merge past full, and when found in chests

--- a/config/autoequipmerge.cfg
+++ b/config/autoequipmerge.cfg
@@ -13,8 +13,14 @@ general {
     # Whether to merge items in the offhand? Ignores hotbarOnly [default: true]
     B:mergeOffhand=true
 
+    # Whether to merge items even if the item to merge into's durability would be full? [default: false]
+    B:mergePastFull=true
+
     # Which mode to merge items? 1) match equivalent nbt, 2) merge nbt tags, 3), ignore nbt, 4) remove nbt [range: 1 ~ 4, default: 1]
     I:nbtMatch=3
+
+    # Whether to merge only items picked up, or all items added to the player inventory? [default: true]
+    B:pickupOnly=false
 }
 
 
